--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Rubik', sans-serif;
+    margin: 0;
+}
+:focus {
+    outline: none;
+}
+input {
+    height: 50px;
+    display: grid;
+    align-items: center;
+    padding: 0 1rem;
+    width: 100%;
+    font-size: 16px;
+    font-family: 'Rubik', sans-serif;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
