--- a/src/app/components/question-item/question-item.component.html
+++ b/src/app/components/question-item/question-item.component.html
@@ -7,7 +7,7 @@
         </label>
         <label>
             Select type of the question
-            <select formControlName="questionType">
+            <select formControlName="questionType" (change)="selectQuestionType()">
                 <option *ngFor="let option of questionTypes" [ngValue]="option">{{option}}</option>
             </select>
         </label>
