--- a/src/app/components/question-item/question-item.component.html
+++ b/src/app/components/question-item/question-item.component.html
@@ -25,6 +25,6 @@
             </div>
             <button (click)="addNewOption()" [disabled]="options.invalid">New option</button>
         </div>
-        <button type="submit" [disabled]="userProfile.invalid">Submit</button>
+        <!-- <button type="submit" [disabled]="userProfile.invalid">Submit</button> -->
     </form>
 </div>
