--- a/src/app/pages/creator/creator.component.html
+++ b/src/app/pages/creator/creator.component.html
@@ -2,6 +2,7 @@
 <div class="wrapper">
     <div class="sidebar">
         <div class="sidebar_item" routerLink="/creator/create-form" routerLinkActive="active">Create form</div>
+        <div class="sidebar_item" routerLink="/creator/my-forms" routerLinkActive="active">My forms</div>
         <div class="sidebar_item" routerLink="/creator/see-results" routerLinkActive="active">See results</div>
     </div>
     <div class="content">
