--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,6 +5,7 @@
     [name]="'Create form'"
     [type]="'primary'"></app-button>
     <app-button
+    routerLink="/creator/my-forms"
     [name]="'See forms'"
     [type]="'secondary'"></app-button>
 </div>
